--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "hello-world",
-  "description": "hello world test app",
+  "name": "charcoal",
+  "description": "charcoal maps",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "0.10.x"
+  },
   "dependencies": {
     "body-parser": "^1.11.0",
     "express": "^4.4.2"
