--- a/package.json
+++ b/package.json
@@ -9,5 +9,12 @@
   "dependencies": {
     "body-parser": "^1.11.0",
     "express": "^4.4.2"
+  },
+  "devDependencies": {
+    "browserify": "^9.0.3",
+    "gulp": "^3.8.11",
+    "reactify": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^2.4.0"
   }
 }
