--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "charcoal",
-  "description": "charcoal maps",
-  "version": "0.0.1",
+  "name": "charcoal-maps",
+  "description": "Charcoal Maps",
+  "version": "0.0.2",
   "private": true,
   "engines": {
     "node": "0.10.x"
