--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
   },
   "dependencies": {
     "body-parser": "^1.11.0",
-    "express": "^4.4.2"
+    "express": "^4.4.2",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
     "browserify": "^9.0.3",
     "gulp": "^3.9.0",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
-    "reactify": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.4.0"
+    "gulp-util": "^3.0.7",
+    "vinyl-source-stream": "^1.0.0"
   }
 }
