--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
     "browserify": "^9.0.3",
+    "eslint": "^2.11.1",
+    "eslint-plugin-react": "^5.1.1",
     "gulp": "^3.9.0",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
